KTSA-#12 : add dependency for uber jar