@@ -156,7 +156,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 
-			<plugin>
+<!--			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.1</version>
@@ -164,12 +164,41 @@
 					<suiteXmlFiles>
 						<suiteXmlFile>src/test/java/com/katf/plans/IntegrationTestSuite.xml</suiteXmlFile>
 					</suiteXmlFiles>
-					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine> <!-- this is due top bug https://github.com/appium/java-client/issues/1619-->
+					<argLine>add-opens java.base/java.lang=ALL-UNNAMED</argLine>  this is due top bug https://github.com/appium/java-client/issues/1619
 				</configuration>
-			</plugin>
+			</plugin>-->
 
+		<plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <version>3.3.0</version> <!-- Use the latest version -->
+            <configuration>
+                <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+                </descriptorRefs>
+            </configuration>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>single</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+        
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>3.0.1</version>
+        <configuration>
+          <nonFilteredFileExtensions>
+            <nonFilteredFileExtension>unix</nonFilteredFileExtension>
+          </nonFilteredFileExtensions>
+        </configuration>
+      </plugin>
+        
 		</plugins>
-
 
 	</build>
 
